k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: byfeb-portfolio-ingress
  namespace: feb
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - byfeb.com
    - www.byfeb.com
    secretName: byfeb-portfolio-tls
  rules:
  - host: byfeb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: byfeb-portfolio-svc
            port:
              number: 80
  - host: www.byfeb.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: byfeb-portfolio-svc
            port:
              number: 80
